WF-810 The post about CMS

--- a/tmpl/web/en/contact.html
+++ b/tmpl/web/en/contact.html
@@ -1,13 +1,40 @@
 {% extends "inc/layout.html" %}
 
-{% block title %}Contacts — TeqCMS{% endblock %}
+{% block title %}Contacts and Services — TeqCMS{% endblock %}
 
 {% block content %}
-<h1>Contacts</h1>
+<h1>Contact Me</h1>
 
 <ul>
     <li>Email: <a href="mailto:alex@wiredgeese.com">alex@wiredgeese.com</a></li>
     <li>GitHub: <a href="https://github.com/flancer64" target="_blank">github.com/flancer64</a></li>
     <li>Telegram: <a href="https://t.me/wiredgeese" target="_blank">@wiredgeese</a></li>
 </ul>
+
+<h2>About Me</h2>
+
+<div class="author-block">
+    <img src="/img/alex.png" alt="Alex Gusev" class="author-photo">
+    <p>I'm Alex Gusev, creator of TeqCMS and TeqFW, a developer with 25+ years of experience. I build systems where content is code, and AI helps automate routine tasks. I use TeqCMS myself in real projects — for example, <a href="https://nutrilog.app.wiredgeese.com/" target="_blank">NutriLog</a>.</p>
+</div>
+
+<h2>How I Can Help</h2>
+
+<ul>
+    <li><strong>Installation</strong> and project setup for your environment</li>
+    <li><strong>AI localization</strong>: configuring translation using LLM API</li>
+    <li><strong>Customization</strong>: templates, logic, CMS components</li>
+    <li><strong>Consulting</strong>: architecture, SSR, CI/CD, deployment</li>
+</ul>
+
+<h2>Terms</h2>
+
+<ul>
+    <li>One-time assistance or ongoing support</li>
+    <li>Migration and production support</li>
+</ul>
+
+<p>Base rate — from <strong>30 €/hour</strong>. Price depends on the task.</p>
+
+<p><a href="mailto:alex@wiredgeese.com">Email me</a> if you want to quickly implement TeqCMS for your project.</p>
 {% endblock %}
