--- a/tmpl/web/ru/index.html
+++ b/tmpl/web/ru/index.html
@@ -1,28 +1,31 @@
 {% extends "inc/layout.html" %}
 
-{% block title %}Tequila CMS — контент как код, AI как переводчик{% endblock %}
+{% block title %}TeqCMS — контент как код, AI как переводчик{% endblock %}
 
 {% block content %}
-<h1>Tequila CMS — минималистичная AI-ориентированная CMS без БД и админок</h1>
+<h1>TeqCMS — AI-ориентированная CMS для тех, кто пишет сайты руками</h1>
 
-<p><strong>TeqCMS</strong> — это способ управлять многоязычным сайтом как кодом. Контент хранится в файлах,
-    редактируется через git и переводится автоматически с помощью LLM.</p>
+<p><strong>TeqCMS</strong> — это file-based CMS без базы данных и фреймворков, созданная для быстрого запуска и
+    сопровождения многоязычных сайтов. Контент редактируется в IDE, переводится LLM-моделью и публикуется как обычные
+    HTML-файлы.</p>
 
 <div style="text-align: center; margin: 2em 0;">
     <img src="/img/schema/overview.png" alt="CMS architecture overview" style="max-width:100%; height:auto;">
 </div>
 
 <ul>
-    <li>⏱ Быстрый старт: развертывание без сборок и баз данных</li>
-    <li>🌍 AI-локализация: переводы обновляются сами по себе</li>
-    <li>💾 Прозрачность: весь сайт — это обычные HTML-файлы</li>
-    <li>🔌 SSR + шаблоны: Nunjucks, Mustache или просто HTML</li>
-    <li>🤖 Разработка в паре с LLM: поддержка промптов на уровне страниц</li>
+    <li>⚡ Скорость: изменения и переводы появляются на сайте за минуты</li>
+    <li>🌍 AI-локализация: переводы генерируются и обновляются автоматически</li>
+    <li>💾 Git-first: весь сайт — обычные файлы под контролем версий</li>
+    <li>🛠 SSR и шаблоны: только серверный рендеринг, никаких SPA</li>
+    <li>🤖 Разработка в паре с LLM: поддержка системных и локальных промптов</li>
 </ul>
 
-<p>TeqCMS идеально подходит для лендингов, документации, SaaS-промо и инди-проектов с международной аудиторией.</p>
+<p>TeqCMS — это выбор для тех, кто хочет публиковать и переводить страницы без бюрократии и ручного дублирования.</p>
+
+<p>Подходит для landing page, документации, SaaS-промо и других проектов, где важны скорость и контроль над
+    локалями.</p>
 
 <p><a href="/{{ locale }}/features/content-as-code.html">Узнать больше о «контенте как код»</a> или <a
-        href="/{{ locale }}/contact.html">заказать
-    настройку</a>.</p>
+        href="/{{ locale }}/contact.html">получить помощь с установкой</a>.</p>
 {% endblock %}
