--- a/tmpl/web/en/inc/layout.html
+++ b/tmpl/web/en/inc/layout.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}My site{% endblock %}</title>
+    <title>{% block title %}My Site{% endblock %}</title>
     <link rel="stylesheet" href="/css/style.css">
+    {# --- SEO Canonical & Alternate URLs --- #}
+    {% if canonicalUrl %}
+        <link rel="canonical" href="{{ canonicalUrl }}">
+    {% endif %}
+    {% if alternateUrls %}
+        {% for lang, url in alternateUrls %}
+            <link rel="alternate" hreflang="{{ lang }}" href="{{ url }}">
+        {% endfor %}
+    {% endif %}
 </head>
 <body>
 {% include "inc/nav.html" %}
