--- a/tmpl/web/ru/inc/layout.html
+++ b/tmpl/web/ru/inc/layout.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Мой сайт{% endblock %}</title>
     <link rel="stylesheet" href="/css/style.css">
+    {# --- SEO Canonical & Alternate URLs --- #}
+    {% if canonicalUrl %}
+        <link rel="canonical" href="{{ canonicalUrl }}">
+    {% endif %}
+    {% if alternateUrls %}
+        {% for lang, url in alternateUrls %}
+            <link rel="alternate" hreflang="{{ lang }}" href="{{ url }}">
+        {% endfor %}
+    {% endif %}
 </head>
 <body>
 {% include "inc/nav.html" %}
