--- a/tmpl/web/ru/inc/nav.html
+++ b/tmpl/web/ru/inc/nav.html
@@ -30,7 +30,7 @@
 
     <div class="nav-right">
         <div class="locale-switcher-inline">
-            {% for loc in localeAllowed %}
+            {% for loc in allowedLocales %}
             {% if not loop.first %}|{% endif %}
             {% if loc == locale %}
             <span>{{ loc | upper }}</span>
@@ -53,7 +53,7 @@
 
     // @formatter:off
     function switchLocale(targetLocale) {
-        const allowed = {{ localeAllowed | dump | safe }};
+        const allowed = {{ allowedLocales | dump | safe }};
         const path = window.location.pathname;
         const current = allowed.find(loc => path === `/${loc}` || path.startsWith(`/${loc}/`));
         let basePath = path;
