fix: localize nav-v2 text

--- a/tmpl/web/ru/inc/nav-v2.html
+++ b/tmpl/web/ru/inc/nav-v2.html
@@ -6,26 +6,32 @@
                 <span class="home-text">Главная</span>
             </a>
         </li>
+        <li><a href="/{{ locale }}/v2/about.html">О проекте</a></li>
+        <li><a href="/{{ locale }}/v2/features.html">Возможности</a></li>
         <li>
-            <span>Возможности</span>
+            <span>Примеры</span>
             <ul>
-                <li><a href="/{{ locale }}/v2/features/content-as-code.html">Контент как код</a></li>
-                <li><a href="/{{ locale }}/v2/features/ai-localization.html">AI Локализация</a></li>
-                <li><a href="/{{ locale }}/v2/features/file-based.html">Файловая CMS</a></li>
-                <li><a href="/{{ locale }}/v2/features/ssr.html">SSR</a></li>
+                <li><a href="/{{ locale }}/v2/examples/landing.html">Лендинг</a></li>
+                <li><a href="/{{ locale }}/v2/examples/blog.html">Блог</a></li>
+                <li><a href="/{{ locale }}/v2/examples/hybrid.html">Гибрид</a></li>
             </ul>
         </li>
         <li>
             <span>Документация</span>
             <ul>
-                <li><a href="/{{ locale }}/v2/docs/about.html">О проекте</a></li>
+                <li><a href="/{{ locale }}/v2/docs/overview.html">Обзор</a></li>
                 <li><a href="/{{ locale }}/v2/docs/install.html">Установка</a></li>
                 <li><a href="/{{ locale }}/v2/docs/config.html">Конфигурация</a></li>
                 <li><a href="/{{ locale }}/v2/docs/locales.html">Локали</a></li>
                 <li><a href="/{{ locale }}/v2/docs/translate.html">Переводы</a></li>
+                <li><a href="/{{ locale }}/v2/docs/cli.html">CLI</a></li>
+                <li><a href="/{{ locale }}/v2/docs/dev-llm.html">Разработка LLM</a></li>
+                <li><a href="/{{ locale }}/v2/docs/faq.html">Частые вопросы</a></li>
+                <li><a href="/{{ locale }}/v2/docs/plugins.html">Плагины</a></li>
+                <li><a href="/{{ locale }}/v2/docs/troubleshooting.html">Устранение неполадок</a></li>
             </ul>
         </li>
-        <li><a href="/{{ locale }}/v2/contact.html">Контакты</a></li>
+        <li><a href="/{{ locale }}/v2/roadmap.html">Дорожная карта</a></li>
     </ul>
 
     <div class="nav-right">
