feat(v2/ru): add initial russian content

--- a/tmpl/web/ru/v2/about.html
+++ b/tmpl/web/ru/v2/about.html
@@ -1,8 +1,18 @@
 {% extends "inc/layout-v2.html" %}
 
-{% block title %}About - TeqCMS v2{% endblock %}
+{% block title %}О проекте — TeqCMS v2{% endblock %}
 
 {% block content %}
-<h1>About</h1>
-<p>Страница в разработке.</p>
+<h1>О проекте</h1>
+<p><strong>@flancer32/teq-cms-promo</strong> — это публичный сайт, собранный на самой платформе TeqCMS. Он служит примером архитектурного применения CMS и показывает, что система готова к реальным задачам.</p>
+
+<p>Основные цели:</p>
+<ul>
+    <li>демонстрация TeqCMS без упрощений и искусственных примеров;</li>
+    <li>образец файловой структуры и модульной организации;</li>
+    <li>точка входа для разработчиков и поисковых систем;</li>
+    <li>тестовая площадка для функций CMS и LLM‑локализации.</li>
+</ul>
+
+<p>Все страницы хранятся в этом репозитории и могут служить основой для собственных проектов. Это не просто демонстрация — это продукт, построенный на своём ядре.</p>
 {% endblock %}
