--- a/tmpl/web/ru/v2/examples/blog.html
+++ b/tmpl/web/ru/v2/examples/blog.html
@@ -1,8 +1,8 @@
 {% extends "inc/layout-v2.html" %}
 
-{% block title %}Blog Example - TeqCMS v2{% endblock %}
+{% block title %}Пример блога — TeqCMS v2{% endblock %}
 
 {% block content %}
-<h1>Blog Example</h1>
-<p>Пример находится в разработке.</p>
+<h1>Пример: блог</h1>
+<p>Демонстрирует работу многоязычных страниц и организацию записей блога. Все посты — обычные HTML‑файлы в каталоге <code>tmpl/web/{locale}/</code>.</p>
 {% endblock %}
