--- a/tmpl/web/ru/v2/examples/hybrid.html
+++ b/tmpl/web/ru/v2/examples/hybrid.html
@@ -1,8 +1,8 @@
 {% extends "inc/layout-v2.html" %}
 
-{% block title %}Hybrid Example - TeqCMS v2{% endblock %}
+{% block title %}Гибридный пример — TeqCMS v2{% endblock %}
 
 {% block content %}
-<h1>Hybrid Example</h1>
-<p>Пример находится в разработке.</p>
+<h1>Пример: гибридный режим</h1>
+<p>Показывает, как сочетать рендеринг TeqCMS с внешними источниками данных, например, читать записи из SQLite.</p>
 {% endblock %}
