--- a/tmpl/web/ru/v2/features.html
+++ b/tmpl/web/ru/v2/features.html
@@ -1,8 +1,16 @@
 {% extends "inc/layout-v2.html" %}
 
-{% block title %}Features - TeqCMS v2{% endblock %}
+{% block title %}Возможности — TeqCMS v2{% endblock %}
 
 {% block content %}
-<h1>Features</h1>
-<p>Страница в разработке.</p>
+<h1>Архитектурные возможности</h1>
+<p>TeqCMS сочетает минимализм и расширяемость. Главные сильные стороны:</p>
+<ul>
+    <li><strong>Контент как код</strong> — страницы, шаблоны и переводы живут в git</li>
+    <li><strong>AI‑локализация</strong> — переводы выполняются через LLM и автоматически обновляются</li>
+    <li><strong>Файловая структура</strong> — вместо БД используются обычные директории</li>
+    <li><strong>SSR</strong> — рендеринг на сервере без client‑side фреймворков</li>
+    <li><strong>Модульность и DI</strong> — поведение заменяется подключаемыми пакетами</li>
+</ul>
+<p>Благодаря этому CMS подходит как для простых лендингов, так и для интеграции в существующие Node.js‑проекты.</p>
 {% endblock %}
