--- a/tmpl/web/ru/v2/index.html
+++ b/tmpl/web/ru/v2/index.html
@@ -1,7 +1,27 @@
 {% extends "inc/layout-v2.html" %}
 
-{% block title %}TeqCMS Demo v2{% endblock %}
+{% block title %}TeqCMS — контент как код, AI как переводчик{% endblock %}
 
 {% block content %}
-<h1>Добро пожаловать в TeqCMS v2</h1>
+<h1>TeqCMS — LLM-ориентированная CMS для тех, кто делает сайты руками</h1>
+
+<p><strong>TeqCMS</strong> — это файловая CMS без баз данных и сборок. Всё содержимое редактируется в IDE, переводы выполняются через LLM, а результат публикуется как обычные HTML-файлы.</p>
+
+<div style="text-align: center; margin: 2em 0;">
+    <img src="/img/schema/overview.png" alt="Общая схема CMS" style="max-width:100%; height:auto;">
+</div>
+
+<ul>
+    <li>⚡ Быстрый цикл правок — изменения и переводы появляются на сайте за минуты</li>
+    <li>🌍 AI‑локализация: переводы генерируются автоматически и обновляются при изменениях</li>
+    <li>💾 Git‑first: весь сайт хранится в репозитории и управляется как код</li>
+    <li>🛠 Только SSR и шаблоны — без SPA и внешних БД</li>
+    <li>🤖 LLM‑first разработка с системными и локальными промптами</li>
+</ul>
+
+<p>TeqCMS подойдёт тем, кто хочет публиковать и переводить страницы без лишней бюрократии и дублирования.</p>
+
+<p>Идеально для лендингов, документации, SaaS‑промо и других проектов, где важна скорость и контроль локалей.</p>
+
+<p><a href="/{{ locale }}/v2/features.html">Подробнее о возможностях</a> или <a href="/{{ locale }}/contact.html">получить помощь с установкой</a>.</p>
 {% endblock %}
