--- a/tmpl/web/ru/v2/roadmap.html
+++ b/tmpl/web/ru/v2/roadmap.html
@@ -1,8 +1,14 @@
 {% extends "inc/layout-v2.html" %}
 
-{% block title %}Roadmap - TeqCMS v2{% endblock %}
+{% block title %}Дорожная карта — TeqCMS v2{% endblock %}
 
 {% block content %}
-<h1>Roadmap</h1>
-<p>Страница в разработке.</p>
+<h1>Дорожная карта</h1>
+<ul>
+    <li>расширение документации и примеров</li>
+    <li>добавление новых шаблонизаторов</li>
+    <li>разработка плагинов и интеграций с внешними сервисами</li>
+    <li>улучшение поддержки Codex‑агентов</li>
+</ul>
+<p>Планы могут корректироваться в зависимости от обратной связи и приоритетов.</p>
 {% endblock %}
