Add Russian v2 about page

--- a/tmpl/web/ru/v2/about.html
+++ b/tmpl/web/ru/v2/about.html
@@ -4,15 +4,32 @@
 
 {% block content %}
 <h1>О проекте</h1>
-<p><strong>@flancer32/teq-cms-promo</strong> — это публичный сайт, собранный на самой платформе TeqCMS. Он служит примером архитектурного применения CMS и показывает, что система готова к реальным задачам.</p>
+<p><strong>@flancer32/teq-cms-promo</strong> развёрнут на движке TeqCMS как отдельный плагин. Это полноценный продукт, работающий как обычное SSR‑приложение без сборок и баз данных.</p>
 
-<p>Основные цели:</p>
+<h2>Что это за сайт</h2>
 <ul>
-    <li>демонстрация TeqCMS без упрощений и искусственных примеров;</li>
-    <li>образец файловой структуры и модульной организации;</li>
-    <li>точка входа для разработчиков и поисковых систем;</li>
-    <li>тестовая площадка для функций CMS и LLM‑локализации.</li>
+    <li>рабочий проект, построенный на TeqCMS</li>
+    <li>реализован в виде плагина CMS</li>
+    <li>хостится без frontend‑фреймворков и БД</li>
 </ul>
 
-<p>Все страницы хранятся в этом репозитории и могут служить основой для собственных проектов. Это не просто демонстрация — это продукт, построенный на своём ядре.</p>
+<h2>Назначение сайта</h2>
+<ul>
+    <li>демонстрация возможностей CMS в реальном контексте</li>
+    <li>стартовая точка для разработчиков file‑based подхода</li>
+    <li>площадка для тестов AI‑генерации и автолокализации</li>
+</ul>
+
+<h2>Как устроен</h2>
+<ul>
+    <li>страницы хранятся в Git как HTML‑шаблоны</li>
+    <li>генерируются через LLM по инструкциям из <code>teq-cms-promo-ctx</code></li>
+    <li>локализация выполняется встроенным AI‑механизмом</li>
+</ul>
+
+<h2>Для кого</h2>
+<ul>
+    <li>инженерам, которые хотят писать сайты как код</li>
+    <li>командам, ценящим контроль и минимальную инфраструктуру</li>
+</ul>
 {% endblock %}
