docs(ru): regenerate v2 about page

--- a/tmpl/web/ru/v2/about.html
+++ b/tmpl/web/ru/v2/about.html
@@ -4,32 +4,35 @@
 
 {% block content %}
 <h1>О проекте</h1>
-<p><strong>@flancer32/teq-cms-promo</strong> развёрнут на движке TeqCMS как отдельный плагин. Это полноценный продукт, работающий как обычное SSR‑приложение без сборок и баз данных.</p>
+<!-- AGENT: page regenerated following ctx instructions -->
+<p><strong>@flancer32/teq-cms-promo</strong> развёрнут на движке TeqCMS и демонстрирует реальные возможности системы. Это полноценный веб‑сайт, работающий как обычное SSR‑приложение без сборок и баз данных.</p>
 
 <h2>Что это за сайт</h2>
 <ul>
-    <li>рабочий проект, построенный на TeqCMS</li>
-    <li>реализован в виде плагина CMS</li>
-    <li>хостится без frontend‑фреймворков и БД</li>
+    <li>полноценный веб‑сайт на TeqCMS, а не просто демо</li>
+    <li>nodejs‑приложение с SSR‑страницами на шаблонизаторе Nunjucks</li>
+    <li>хостится без сборок, БД и frontend‑фреймворков</li>
 </ul>
 
 <h2>Назначение сайта</h2>
 <ul>
-    <li>демонстрация возможностей CMS в реальном контексте</li>
-    <li>стартовая точка для разработчиков file‑based подхода</li>
-    <li>площадка для тестов AI‑генерации и автолокализации</li>
+    <li>демонстрация возможностей TeqCMS в реальном контексте</li>
+    <li>стартовая точка для разработчиков file‑based CMS</li>
+    <li>площадка для тестирования AI‑генерации и автолокализации</li>
 </ul>
 
 <h2>Как устроен</h2>
 <ul>
-    <li>страницы хранятся в Git как HTML‑шаблоны</li>
-    <li>генерируются через LLM по инструкциям из <code>teq-cms-promo-ctx</code></li>
-    <li>локализация выполняется встроенным AI‑механизмом</li>
+    <li>все страницы хранятся в Git как Nunjucks‑шаблоны</li>
+    <li>генерируются LLM по инструкциям из приватного каталога <code>teq-cms-promo-ctx</code></li>
+    <li>локализация выполняется вручную через встроенный AI‑механизм CMS</li>
 </ul>
 
 <h2>Для кого</h2>
 <ul>
-    <li>инженерам, которые хотят писать сайты как код</li>
-    <li>командам, ценящим контроль и минимальную инфраструктуру</li>
+    <li><strong>Индихакеры</strong>, которым нужен минималистичный и расширяемый движок</li>
+    <li><strong>Технические основатели</strong>, желающие быстро развернуть проект с ростом</li>
+    <li><strong>Команды, использующие LLM</strong>, включая автоагентов и Codex‑пайплайны</li>
+    <li><strong>Разработчики модульных систем</strong>, ценящие гибкость и контроль без скрытой логики</li>
 </ul>
 {% endblock %}
