chore: add notes for about page update

--- a/tmpl/web/ru/v2/about.html
+++ b/tmpl/web/ru/v2/about.html
@@ -3,36 +3,48 @@
 {% block title %}О проекте — TeqCMS v2{% endblock %}
 
 {% block content %}
-<h1>О проекте</h1>
+<h1>Сайт, созданный ИИ-агентом</h1>
 <!-- AGENT: page regenerated following ctx instructions -->
-<p><strong>@flancer32/teq-cms-promo</strong> развёрнут на движке TeqCMS и демонстрирует реальные возможности системы. Это полноценный веб‑сайт, работающий как обычное SSR‑приложение без сборок и баз данных.</p>
+<p>Этот сайт полностью сгенерирован в диалоге с LLM-агентом. Мы ставим задачу — агент создаёт шаблоны, тексты и переводы, которые сразу попадают в репозиторий.</p>
 
-<h2>Что это за сайт</h2>
+<h2>Почему это возможно</h2>
 <ul>
-    <li>полноценный веб‑сайт на TeqCMS, а не просто демо</li>
-    <li>nodejs‑приложение с SSR‑страницами на шаблонизаторе Nunjucks</li>
-    <li>хостится без сборок, БД и frontend‑фреймворков</li>
+    <li>В TeqCMS нет базы данных: все страницы — обычные файлы.</li>
+    <li>Отсутствует панель управления, поэтому контент редактируется напрямую.</li>
+    <li>Любые инструменты, включая LLM, работают с этими файлами без ограничений.</li>
 </ul>
 
-<h2>Назначение сайта</h2>
+<h2>Контент как код</h2>
 <ul>
-    <li>демонстрация возможностей TeqCMS в реальном контексте</li>
-    <li>стартовая точка для разработчиков file‑based CMS</li>
-    <li>площадка для тестирования AI‑генерации и автолокализации</li>
+    <li>Страницы и переводы находятся рядом и versionируются через git.</li>
+    <li>HTML-структура понятна и подходит для генерации.</li>
+    <li>Каждая правка фиксируется в истории коммитов.</li>
 </ul>
 
-<h2>Как устроен</h2>
+<h2>LLM в процессе создания</h2>
 <ul>
-    <li>все страницы хранятся в Git как Nunjucks‑шаблоны</li>
-    <li>генерируются LLM по инструкциям из приватного каталога <code>teq-cms-promo-ctx</code></li>
-    <li>локализация выполняется вручную через встроенный AI‑механизм CMS</li>
+    <li>Агент не встроен в CMS — он просто записывает файлы.</li>
+    <li>Новые страницы и секции появляются как результат диалога, а не ручной работы.</li>
+    <li>CMS показывает именно то, что сгенерировал агент, без лишних слоёв.</li>
+</ul>
+
+<h2>Что делает CMS</h2>
+<ul>
+    <li>Рендерит страницы на сервере через Nunjucks.</li>
+    <li>Определяет локаль по URL и подставляет нужные шаблоны.</li>
+    <li>Не управляет содержанием — только выводит его.</li>
 </ul>
 
 <h2>Для кого</h2>
 <ul>
-    <li><strong>Индихакеры</strong>, которым нужен минималистичный и расширяемый движок</li>
-    <li><strong>Технические основатели</strong>, желающие быстро развернуть проект с ростом</li>
-    <li><strong>Команды, использующие LLM</strong>, включая автоагентов и Codex‑пайплайны</li>
-    <li><strong>Разработчики модульных систем</strong>, ценящие гибкость и контроль без скрытой логики</li>
+    <li>Разработчики, работающие с LLM и генеративными инструментами.</li>
+    <li>Команды, которым ближе подход «контент как код».</li>
+    <li>Те, кто хочет использовать ИИ не как плагин, а как полноценного участника процесса.</li>
+</ul>
+
+<h2>Попробуйте</h2>
+<ul>
+    <li>Откройте исходники на GitHub и посмотрите структуру файлов.</li>
+    <li>Сформулируйте задачу агенту и добавьте свою страницу.</li>
 </ul>
 {% endblock %}
