Update about page with resource links and add EN translation

--- a/tmpl/web/ru/v2/about.html
+++ b/tmpl/web/ru/v2/about.html
@@ -47,4 +47,12 @@
     <li>Откройте исходники на GitHub и посмотрите структуру файлов.</li>
     <li>Сформулируйте задачу агенту и добавьте свою страницу.</li>
 </ul>
+
+<h2>Связанные ресурсы</h2>
+<ul>
+    <li><a href="https://github.com/flancer32/teq-cms">TeqCMS на GitHub</a></li>
+    <li><a href="https://www.npmjs.com/package/@flancer32/teq-cms">TeqCMS на npm</a></li>
+    <li><a href="https://github.com/flancer32/teq-cms-promo">TeqCMS Promo на GitHub</a></li>
+    <li><a href="https://wiredgeese.com">Сайт автора</a></li>
+</ul>
 {% endblock %}
