Add note on rewriting about pages

--- a/tmpl/web/ru/v2/about.html
+++ b/tmpl/web/ru/v2/about.html
@@ -5,54 +5,52 @@
 {% block content %}
 <h1>Сайт, созданный ИИ-агентом</h1>
 <!-- AGENT: page regenerated following ctx instructions -->
-<p>Этот сайт полностью сгенерирован в диалоге с LLM-агентом. Мы ставим задачу — агент создаёт шаблоны, тексты и переводы, которые сразу попадают в репозиторий.</p>
+<ul>
+    <li>Я формулирую задачи, а агент создаёт страницы по итогам нескольких итераций.</li>
+    <li>Структуру, тексты и переводы генерирует агент, а не я вручную.</li>
+    <li>В роли агента использую <a href="https://openai.com/codex/">OpenAI Codex</a>.</li>
+    <li>Этот сайт — не демонстрация CMS, а результат её применения вместе с агентом.</li>
+</ul>
 
 <h2>Почему это возможно</h2>
 <ul>
-    <li>В TeqCMS нет базы данных: все страницы — обычные файлы.</li>
-    <li>Отсутствует панель управления, поэтому контент редактируется напрямую.</li>
-    <li>Любые инструменты, включая LLM, работают с этими файлами без ограничений.</li>
+    <li>В TeqCMS нет базы данных: все страницы — файлы на диске.</li>
+    <li>В CMS нет UI-панели, поэтому я редактирую контент напрямую.</li>
+    <li>Любые инструменты, включая LLM, могут работать с этими файлами без ограничений.</li>
 </ul>
 
 <h2>Контент как код</h2>
 <ul>
-    <li>Страницы и переводы находятся рядом и versionируются через git.</li>
-    <li>HTML-структура понятна и подходит для генерации.</li>
+    <li>Страницы и переводы я храню вместе в git — <a href="https://github.com/flancer32/teq-cms-promo">teq-cms-promo</a>.</li>
+    <li>HTML-структура прозрачна и подходит для генерации.</li>
     <li>Каждая правка фиксируется в истории коммитов.</li>
 </ul>
 
 <h2>LLM в процессе создания</h2>
 <ul>
     <li>Агент не встроен в CMS — он просто записывает файлы.</li>
-    <li>Новые страницы и секции появляются как результат диалога, а не ручной работы.</li>
+    <li>Новые страницы и секции появляются в диалоге: я задаю вопрос, агент отвечает.</li>
     <li>CMS показывает именно то, что сгенерировал агент, без лишних слоёв.</li>
 </ul>
 
 <h2>Что делает CMS</h2>
 <ul>
-    <li>Рендерит страницы на сервере через Nunjucks.</li>
+    <li>Рендерит страницы на сервере через Nunjucks или Mustache.</li>
     <li>Определяет локаль по URL и подставляет нужные шаблоны.</li>
     <li>Не управляет содержанием — только выводит его.</li>
 </ul>
 
 <h2>Для кого</h2>
 <ul>
-    <li>Разработчики, работающие с LLM и генеративными инструментами.</li>
-    <li>Команды, которым ближе подход «контент как код».</li>
-    <li>Те, кто хочет использовать ИИ не как плагин, а как полноценного участника процесса.</li>
+    <li>Разработчикам, работающим с LLM и генеративными инструментами.</li>
+    <li>Командам, которым ближе подход «контент как код».</li>
+    <li>Тем, кто хочет использовать ИИ как полноценного участника процесса.</li>
 </ul>
 
 <h2>Попробуйте</h2>
 <ul>
-    <li>Откройте исходники на GitHub и посмотрите структуру файлов.</li>
-    <li>Сформулируйте задачу агенту и добавьте свою страницу.</li>
-</ul>
-
-<h2>Связанные ресурсы</h2>
-<ul>
-    <li><a href="https://github.com/flancer32/teq-cms">TeqCMS на GitHub</a></li>
-    <li><a href="https://www.npmjs.com/package/@flancer32/teq-cms">TeqCMS на npm</a></li>
-    <li><a href="https://github.com/flancer32/teq-cms-promo">TeqCMS Promo на GitHub</a></li>
-    <li><a href="https://wiredgeese.com">Сайт автора</a></li>
+    <li>Посмотрите исходники на GitHub: <a href="https://github.com/flancer32/teq-cms">teq-cms</a> — движок, <a href="https://github.com/flancer32/teq-cms-promo">teq-cms-promo</a> — этот сайт, <a href="https://wiredgeese.com">мой персональный сайт</a>.</li>
+    <li>Изучите структуру шаблонов и файлов.</li>
+    <li>Сформулируйте задачу агенту — и добавьте свою страницу в пару шагов.</li>
 </ul>
 {% endblock %}
