Add contacts page for v2 and update navigation

--- a/tmpl/web/ru/inc/nav-v2.html
+++ b/tmpl/web/ru/inc/nav-v2.html
@@ -23,6 +23,7 @@
             </ul>
         </li>
         <li><a href="/{{ locale }}/v2/roadmap.html">Дорожная карта</a></li>
+        <li><a href="/{{ locale }}/v2/contacts.html">Контакты</a></li>
     </ul>
 
     <div class="nav-right">
