--- a/tmpl/web/en/inc/nav-v2.html
+++ b/tmpl/web/en/inc/nav-v2.html
@@ -23,6 +23,7 @@
             </ul>
         </li>
         <li><a href="/{{ locale }}/v2/roadmap.html">Roadmap</a></li>
+        <li><a href="/{{ locale }}/v2/contacts.html">Contacts</a></li>
     </ul>
 
     <div class="nav-right">
