Fix photo path on contacts pages

--- a/tmpl/web/en/v2/contacts.html
+++ b/tmpl/web/en/v2/contacts.html
@@ -7,7 +7,10 @@
 <!-- AGENT: page regenerated following ctx instructions -->
 
 <h2>Who I Am</h2>
-<p>I'm Alex Gusev, developer of TeqCMS with over 25 years of experience. I build systems where content lives as code and is localized through LLMs.</p>
+<div class="author-block">
+    <img src="/web/img/alex.png" alt="Alex Gusev" loading="lazy" class="author-photo">
+    <p>I'm Alex Gusev, developer of TeqCMS with more than 25 years of experience. I use it in real projects like <a href="https://nutrilog.app.wiredgeese.com/" target="_blank">NutriLog</a>.</p>
+</div>
 
 <h2>What I Offer</h2>
 <ul>
