--- a/tmpl/web/ru/v2/contacts.html
+++ b/tmpl/web/ru/v2/contacts.html
@@ -7,7 +7,10 @@
 <!-- AGENT: page regenerated following ctx instructions -->
 
 <h2>Кто я</h2>
-<p>Я, Алекс Гусев, разработчик TeqCMS с более чем 25‑летним опытом. Создаю системы, где контент хранится как код и легко локализуется через LLM.</p>
+<div class="author-block">
+    <img src="/web/img/alex.png" alt="Алекс Гусев" loading="lazy" class="author-photo">
+    <p>Я, Алекс Гусев, разработчик TeqCMS с более чем 25‑летним опытом. Использую систему в реальных проектах, например <a href="https://nutrilog.app.wiredgeese.com/" target="_blank">NutriLog</a>.</p>
+</div>
 
 <h2>Что я предлагаю</h2>
 <ul>
