--- a/tmpl/web/en/contact.html
+++ b/tmpl/web/en/contact.html
@@ -14,7 +14,7 @@
 <h2>About Me</h2>
 
 <div class="author-block">
-    <img src="/img/alex.png" alt="Alex Gusev" class="author-photo">
+    <img src="/web/img/alex.png" alt="Alex Gusev" class="author-photo">
     <p>I'm Alex Gusev, creator of TeqCMS and TeqFW, a developer with 25+ years of experience. I build systems where content is code, and AI helps automate routine tasks. I use TeqCMS myself in real projects — for example, <a href="https://nutrilog.app.wiredgeese.com/" target="_blank">NutriLog</a>.</p>
 </div>
 
