WF-830 TeqCMS: add a contact page with Codex

--- a/tmpl/web/en/v2/contacts.html
+++ b/tmpl/web/en/v2/contacts.html
@@ -8,7 +8,7 @@
 
 <h2>Who I Am</h2>
 <div class="author-block">
-    <img src="/web/img/alex.png" alt="Alex Gusev" loading="lazy" class="author-photo">
+    <img src="/img/alex.png" alt="Alex Gusev" loading="lazy" class="author-photo">
     <p>I'm Alex Gusev, developer of TeqCMS with more than 25 years of experience. I use it in real projects like <a href="https://nutrilog.app.wiredgeese.com/" target="_blank">NutriLog</a>.</p>
 </div>
 
