--- a/tmpl/web/ru/v2/contacts.html
+++ b/tmpl/web/ru/v2/contacts.html
@@ -8,7 +8,7 @@
 
 <h2>Кто я</h2>
 <div class="author-block">
-    <img src="/web/img/alex.png" alt="Алекс Гусев" loading="lazy" class="author-photo">
+    <img src="/img/alex.png" alt="Алекс Гусев" loading="lazy" class="author-photo">
     <p>Я, Алекс Гусев, разработчик TeqCMS с более чем 25‑летним опытом. Использую систему в реальных проектах, например <a href="https://nutrilog.app.wiredgeese.com/" target="_blank">NutriLog</a>.</p>
 </div>
 
