Fix image path on contacts

--- a/tmpl/web/en/contact.html
+++ b/tmpl/web/en/contact.html
@@ -14,8 +14,10 @@
 <h2>About Me</h2>
 
 <div class="author-block">
-    <img src="/web/img/alex.png" alt="Alex Gusev" class="author-photo">
-    <p>I'm Alex Gusev, creator of TeqCMS and TeqFW, a developer with 25+ years of experience. I build systems where content is code, and AI helps automate routine tasks. I use TeqCMS myself in real projects — for example, <a href="https://nutrilog.app.wiredgeese.com/" target="_blank">NutriLog</a>.</p>
+    <img src="/img/alex.png" alt="Alex Gusev" class="author-photo">
+    <div class="author-text">
+        <p>I'm Alex Gusev, creator of TeqCMS and TeqFW, a developer with 25+ years of experience. I build systems where content is code, and AI helps automate routine tasks. I use TeqCMS myself in real projects — for example, <a href="https://nutrilog.app.wiredgeese.com/" target="_blank">NutriLog</a>.</p>
+    </div>
 </div>
 
 <h2>How I Can Help</h2>
