--- a/tmpl/web/en/v2/contacts.html
+++ b/tmpl/web/en/v2/contacts.html
@@ -9,7 +9,9 @@
 <h2>Who I Am</h2>
 <div class="author-block">
     <img src="/img/alex.png" alt="Alex Gusev" loading="lazy" class="author-photo">
-    <p>I'm Alex Gusev, developer of TeqCMS with more than 25 years of experience. I use it in real projects like <a href="https://nutrilog.app.wiredgeese.com/" target="_blank">NutriLog</a>.</p>
+    <div class="author-text">
+        <p>I'm Alex Gusev, developer of TeqCMS with more than 25 years of experience. I use it in real projects like <a href="https://nutrilog.app.wiredgeese.com/" target="_blank">NutriLog</a>.</p>
+    </div>
 </div>
 
 <h2>What I Offer</h2>
