--- a/tmpl/web/ru/contact.html
+++ b/tmpl/web/ru/contact.html
@@ -14,10 +14,12 @@
 <h2>Обо мне</h2>
 
 <div class="author-block">
-    <img src="/web/img/alex.png" alt="Alex Gusev" class="author-photo">
-    <p>Я — Алекс Гусев, автор TeqCMS и TeqFW, разработчик с 25+ годами опыта. Создаю системы, где контент — это код, а
-        AI помогает автоматизировать рутину. TeqCMS я использую сам, в реальных проектах — например, <a
-                href="https://nutrilog.app.wiredgeese.com/" target="_blank">NutriLog</a>.</p>
+    <img src="/img/alex.png" alt="Alex Gusev" class="author-photo">
+    <div class="author-text">
+        <p>Я — Алекс Гусев, автор TeqCMS и TeqFW, разработчик с 25+ годами опыта. Создаю системы, где контент — это код, а
+            AI помогает автоматизировать рутину. TeqCMS я использую сам, в реальных проектах — например, <a
+                    href="https://nutrilog.app.wiredgeese.com/" target="_blank">NutriLog</a>.</p>
+    </div>
 </div>
 
 <h2>Чем могу помочь</h2>
