--- a/tmpl/web/ru/v2/contacts.html
+++ b/tmpl/web/ru/v2/contacts.html
@@ -9,7 +9,9 @@
 <h2>Кто я</h2>
 <div class="author-block">
     <img src="/img/alex.png" alt="Алекс Гусев" loading="lazy" class="author-photo">
-    <p>Я, Алекс Гусев, разработчик TeqCMS с более чем 25‑летним опытом. Использую систему в реальных проектах, например <a href="https://nutrilog.app.wiredgeese.com/" target="_blank">NutriLog</a>.</p>
+    <div class="author-text">
+        <p>Я, Алекс Гусев, разработчик TeqCMS с более чем 25‑летним опытом. Использую систему в реальных проектах, например <a href="https://nutrilog.app.wiredgeese.com/" target="_blank">NutriLog</a>.</p>
+    </div>
 </div>
 
 <h2>Что я предлагаю</h2>
