--- a/tmpl/web/en/v2/index.html
+++ b/tmpl/web/en/v2/index.html
@@ -1,8 +1,63 @@
 {% extends "inc/layout-v2.html" %}
 
-{% block title %}TeqCMS — content as code, AI as translator{% endblock %}
+{% block title %}AISM — context-driven site management{% endblock %}
 
 {% block content %}
-<h1>TeqCMS — file-based CMS powered by AI</h1>
-<p>This section mirrors the Russian version and will be expanded soon.</p>
+<h1>AISM — managing a site through context and an agent</h1>
+<!-- AGENT: page regenerated following ctx instructions -->
+
+<section>
+    <p>AISM stands for AI-Driven Site Management. I describe it as "Creating a context that guides the Agent who creates the content."</p>
+    <ul>
+        <li>I outline goals and structure in the context.</li>
+        <li>The agent reads the instructions and edits the files.</li>
+        <li>The content is published without manual sync.</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Product architecture</h2>
+    <p>The system combines TeqCMS, the agent and the cognitive context. The context may live in a separate repository.</p>
+    <table>
+        <thead>
+        <tr><th>Component</th><th>Role</th></tr>
+        </thead>
+        <tbody>
+        <tr><td>.gen.md</td><td>Page generation task</td></tr>
+        <tr><td>.prompt.md</td><td>Detailed instructions</td></tr>
+        <tr><td>agent/notes/...</td><td>Agent reports and history</td></tr>
+        </tbody>
+    </table>
+</section>
+
+<section>
+    <h2>Workflow</h2>
+    <ol>
+        <li>Prepare the context.</li>
+        <li>Define a task.</li>
+        <li>The agent updates templates.</li>
+        <li>I merge the Pull Request.</li>
+    </ol>
+    <p>The task can be refined, and I can request another iteration before merging.</p>
+</section>
+
+<section>
+    <h2>Approach advantages</h2>
+    <table>
+        <thead>
+        <tr><th>Advantage</th><th>Explanation</th></tr>
+        </thead>
+        <tbody>
+        <tr><td>Git control</td><td>Every change is visible through git diff.</td></tr>
+        <tr><td>SSR</td><td>Templates render pages on the server.</td></tr>
+        <tr><td>Agent review</td><td>Changes go through a Pull Request.</td></tr>
+        <tr><td>Mass update</td><td>Context edits cascade to many pages.</td></tr>
+        </tbody>
+    </table>
+</section>
+
+<section>
+    <h2>Who is it for</h2>
+    <p>The approach targets indie developers and solo founders who need frequent edits, automation and no complex CMS.</p>
+</section>
 {% endblock %}
