--- a/tmpl/web/ru/v2/index.html
+++ b/tmpl/web/ru/v2/index.html
@@ -1,27 +1,63 @@
 {% extends "inc/layout-v2.html" %}
 
-{% block title %}TeqCMS — контент как код, AI как переводчик{% endblock %}
+{% block title %}КУС — AISM подход к управлению сайтом{% endblock %}
 
 {% block content %}
-<h1>TeqCMS — LLM-ориентированная CMS для тех, кто делает сайты руками</h1>
+<h1>КУС — Когнитивно-Контекстное Управление Сайтом</h1>
+<!-- AGENT: page regenerated following ctx instructions -->
 
-<p><strong>TeqCMS</strong> — это файловая CMS без баз данных и сборок. Всё содержимое редактируется в IDE, переводы выполняются через LLM, а результат публикуется как обычные HTML-файлы.</p>
+<section>
+    <p>КУС означает «Когнитивно-Контекстное Управление Сайтом». Для себя я использую формулу: «Создание контекста, управляющего Агентом, создающим контент». В английских материалах этот подход известен как AISM.</p>
+    <ul>
+        <li>Я фиксирую цели и структуру в контексте.</li>
+        <li>Агент читает инструкции и обновляет файлы.</li>
+        <li>Контент публикуется без ручной синхронизации.</li>
+    </ul>
+</section>
 
-<div style="text-align: center; margin: 2em 0;">
-    <img src="/img/schema/overview.png" alt="Общая схема CMS" style="max-width:100%; height:auto;">
-</div>
+<section>
+    <h2>Архитектура продукта</h2>
+    <p>Система состоит из TeqCMS, агента и когнитивного контекста. Контекст можно хранить отдельно от сайта.</p>
+    <table>
+        <thead>
+        <tr><th>Компонент</th><th>Роль</th></tr>
+        </thead>
+        <tbody>
+        <tr><td>.gen.md</td><td>Описание задачи для страницы</td></tr>
+        <tr><td>.prompt.md</td><td>Уточнение инструкций к генерации</td></tr>
+        <tr><td>agent/notes/...</td><td>История запросов и результатов</td></tr>
+        </tbody>
+    </table>
+</section>
 
-<ul>
-    <li>⚡ Быстрый цикл правок — изменения и переводы появляются на сайте за минуты</li>
-    <li>🌍 AI‑локализация: переводы генерируются автоматически и обновляются при изменениях</li>
-    <li>💾 Git‑first: весь сайт хранится в репозитории и управляется как код</li>
-    <li>🛠 Только SSR и шаблоны — без SPA и внешних БД</li>
-    <li>🤖 LLM‑first разработка с системными и локальными промптами</li>
-</ul>
+<section>
+    <h2>Рабочий процесс</h2>
+    <ol>
+        <li>Подготавливаю контекст.</li>
+        <li>Ставлю задачу агенту.</li>
+        <li>Агент обновляет шаблоны.</li>
+        <li>Я принимаю Pull Request.</li>
+    </ol>
+    <p>При необходимости я могу уточнить задачу и повторить итерацию.</p>
+</section>
 
-<p>TeqCMS подойдёт тем, кто хочет публиковать и переводить страницы без лишней бюрократии и дублирования.</p>
+<section>
+    <h2>Преимущества подхода</h2>
+    <table>
+        <thead>
+        <tr><th>Преимущество</th><th>Объяснение</th></tr>
+        </thead>
+        <tbody>
+        <tr><td>Git-контроль</td><td>Каждая правка видна через git diff.</td></tr>
+        <tr><td>SSR</td><td>Страницы рендерятся на сервере по шаблонам.</td></tr>
+        <tr><td>Agent-review</td><td>Изменения проходят ревью в Pull Request.</td></tr>
+        <tr><td>Массовое обновление</td><td>Правки в контексте синхронно применяются к разным страницам.</td></tr>
+        </tbody>
+    </table>
+</section>
 
-<p>Идеально для лендингов, документации, SaaS‑промо и других проектов, где важна скорость и контроль локалей.</p>
-
-<p><a href="/{{ locale }}/v2/features.html">Подробнее о возможностях</a> или <a href="/{{ locale }}/contact.html">получить помощь с установкой</a>.</p>
+<section>
+    <h2>Для кого это</h2>
+    <p>Эта методика создана для индие-разработчиков и соло-фаундеров, которым нужны частые правки, автоматизация и отсутствие громоздкой CMS.</p>
+</section>
 {% endblock %}
