docs: fix Russian ADSM page encoding

--- a/tmpl/web/ru/inc/nav-v2.html
+++ b/tmpl/web/ru/inc/nav-v2.html
@@ -11,6 +11,7 @@
             <span>Документация</span>
             <ul>
                 <li><a href="/{{ locale }}/v2/docs/overview.html">Обзор</a></li>
+                <li><a href="/{{ locale }}/v2/docs/adsm.html">ADSM</a></li>
                 <li><a href="/{{ locale }}/v2/docs/install.html">Установка</a></li>
                 <li><a href="/{{ locale }}/v2/docs/config.html">Конфигурация</a></li>
                 <li><a href="/{{ locale }}/v2/docs/locales.html">Локали</a></li>
