--- a/tmpl/web/en/inc/nav-v2.html
+++ b/tmpl/web/en/inc/nav-v2.html
@@ -11,6 +11,7 @@
             <span>Documentation</span>
             <ul>
                 <li><a href="/{{ locale }}/v2/docs/overview.html">Overview</a></li>
+                <li><a href="/{{ locale }}/v2/docs/adsm.html">ADSM</a></li>
                 <li><a href="/{{ locale }}/v2/docs/install.html">Installation</a></li>
                 <li><a href="/{{ locale }}/v2/docs/config.html">Configuration</a></li>
                 <li><a href="/{{ locale }}/v2/docs/locales.html">Locales</a></li>
