--- a/tmpl/web/en/inc/layout-v2.html
+++ b/tmpl/web/en/inc/layout-v2.html
@@ -7,13 +7,29 @@
     <link rel="stylesheet" href="/css/style.css">
     {# --- SEO Canonical & Alternate URLs --- #}
     {% if canonicalUrl %}
-        <link rel="canonical" href="{{ canonicalUrl }}">
+    <link rel="canonical" href="{{ canonicalUrl }}">
     {% endif %}
     {% if alternateUrls %}
-        {% for lang, url in alternateUrls %}
-            <link rel="alternate" hreflang="{{ lang }}" href="{{ url }}">
-        {% endfor %}
+    {% for lang, url in alternateUrls %}
+    <link rel="alternate" hreflang="{{ lang }}" href="{{ url }}">
+    {% endfor %}
     {% endif %}
+    {# --- Social Preview --- #}
+    {% block og %}
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="TeqCMS — CMS that treats content as code">
+    <meta property="og:description"
+          content="TeqCMS is a file-based CMS without database or admin panel, powered by AI localization and git workflow.">
+    <meta property="og:image" content="/favicon.ico">
+    <meta property="og:url" content="{{ canonicalUrl }}">
+    <meta property="og:locale" content="{{ locale.current }}">
+    {% endblock %}
+    {% block twitter %}
+    <meta name="twitter:title" content="TeqCMS — CMS that treats content as code">
+    <meta name="twitter:description"
+          content="TeqCMS is a file-based CMS without database or admin panel, powered by AI localization and git workflow.">
+    <meta name="twitter:image" content="/favicon.ico">
+    {% endblock %}
 </head>
 <body>
 {% include "inc/nav-v2.html" %}
