--- a/tmpl/web/ru/inc/layout-v2.html
+++ b/tmpl/web/ru/inc/layout-v2.html
@@ -3,17 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Мой сайт{% endblock %}</title>
+    <title>{% block title %}TeqCMS{% endblock %}</title>
     <link rel="stylesheet" href="/css/style.css">
     {# --- SEO Canonical & Alternate URLs --- #}
     {% if canonicalUrl %}
-        <link rel="canonical" href="{{ canonicalUrl }}">
+    <link rel="canonical" href="{{ canonicalUrl }}">
     {% endif %}
     {% if alternateUrls %}
-        {% for lang, url in alternateUrls %}
-            <link rel="alternate" hreflang="{{ lang }}" href="{{ url }}">
-        {% endfor %}
+    {% for lang, url in alternateUrls %}
+    <link rel="alternate" hreflang="{{ lang }}" href="{{ url }}">
+    {% endfor %}
     {% endif %}
+    {# --- Social Preview --- #}
+    {% block og %}
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="TeqCMS — CMS, где контент как код">
+    <meta property="og:description"
+          content="TeqCMS — это файловая CMS без базы данных и админки, с AI-локализацией и управлением через git.">
+    <meta property="og:image" content="/favicon.ico">
+    <meta property="og:url" content="{{ canonicalUrl }}">
+    <meta property="og:locale" content="{{ locale.current }}">
+    {% endblock %}
+    {% block twitter %}
+    <meta name="twitter:title" content="TeqCMS — CMS, где контент как код">
+    <meta name="twitter:description"
+          content="TeqCMS — это файловая CMS без базы данных и админки, с AI-локализацией и управлением через git.">
+    <meta name="twitter:image" content="/favicon.ico">
+    {% endblock %}
 </head>
 <body>
 {% include "inc/nav-v2.html" %}
