WF-833 Review docs in the CMS site context

--- a/tmpl/web/en/inc/layout-v2.html
+++ b/tmpl/web/en/inc/layout-v2.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="TeqCMS — CMS that treats content as code">
     <meta property="og:description"
           content="TeqCMS is a file-based CMS without database or admin panel, powered by AI localization and git workflow.">
-    <meta property="og:image" content="/favicon.ico">
+    <meta property="og:image" content="/img/site_preview.png">
     <meta property="og:url" content="{{ canonicalUrl }}">
     <meta property="og:locale" content="{{ locale.current }}">
     {% endblock %}
@@ -28,7 +28,7 @@
     <meta name="twitter:title" content="TeqCMS — CMS that treats content as code">
     <meta name="twitter:description"
           content="TeqCMS is a file-based CMS without database or admin panel, powered by AI localization and git workflow.">
-    <meta name="twitter:image" content="/favicon.ico">
+    <meta name="twitter:image" content="/img/site_preview.png">
     {% endblock %}
 </head>
 <body>
