--- a/tmpl/web/ru/inc/layout-v2.html
+++ b/tmpl/web/ru/inc/layout-v2.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="TeqCMS — CMS, где контент как код">
     <meta property="og:description"
           content="TeqCMS — это файловая CMS без базы данных и админки, с AI-локализацией и управлением через git.">
-    <meta property="og:image" content="/favicon.ico">
+    <meta property="og:image" content="/img/site_preview.png">
     <meta property="og:url" content="{{ canonicalUrl }}">
     <meta property="og:locale" content="{{ locale.current }}">
     {% endblock %}
@@ -28,7 +28,7 @@
     <meta name="twitter:title" content="TeqCMS — CMS, где контент как код">
     <meta name="twitter:description"
           content="TeqCMS — это файловая CMS без базы данных и админки, с AI-локализацией и управлением через git.">
-    <meta name="twitter:image" content="/favicon.ico">
+    <meta name="twitter:image" content="/img/site_preview.png">
     {% endblock %}
 </head>
 <body>
