Add subscription page and nav links

--- a/tmpl/web/en/inc/nav.html
+++ b/tmpl/web/en/inc/nav.html
@@ -25,6 +25,7 @@
                 <li><a href="/{{ locale }}/docs/translate.html">Translations</a></li>
             </ul>
         </li>
+        <li><a href="/{{ locale }}/subscription.html">Subscription</a></li>
         <li><a href="/{{ locale }}/contact.html">Contact</a></li>
     </ul>
 
