--- a/tmpl/web/ru/inc/nav.html
+++ b/tmpl/web/ru/inc/nav.html
@@ -25,6 +25,7 @@
                 <li><a href="/{{ locale }}/docs/translate.html">Переводы</a></li>
             </ul>
         </li>
+        <li><a href="/{{ locale }}/subscription.html">Подписка</a></li>
         <li><a href="/{{ locale }}/contact.html">Контакты</a></li>
     </ul>
 
