Document subscription page transfer

--- a/tmpl/web/en/inc/nav-v2.html
+++ b/tmpl/web/en/inc/nav-v2.html
@@ -24,6 +24,7 @@
             </ul>
         </li>
         <li><a href="/{{ locale }}/v2/roadmap.html">Roadmap</a></li>
+        <li><a href="/{{ locale }}/v2/subscription.html">Subscription</a></li>
         <li><a href="/{{ locale }}/v2/contacts.html">Contacts</a></li>
     </ul>
 
