--- a/tmpl/web/ru/inc/nav-v2.html
+++ b/tmpl/web/ru/inc/nav-v2.html
@@ -24,6 +24,7 @@
             </ul>
         </li>
         <li><a href="/{{ locale }}/v2/roadmap.html">Дорожная карта</a></li>
+        <li><a href="/{{ locale }}/v2/subscription.html">Подписка</a></li>
         <li><a href="/{{ locale }}/v2/contacts.html">Контакты</a></li>
     </ul>
 
